- Downgraded project to use JDK 8